# client

./: OWNCLOUD.cmake  README.md  VERSION.cmake
.github/workflows/: branded-client.yml  changelog.yml  gui-tests.yml  main.yml  patch-release-notes.yml  publish-release.yml  translate.yml
admin/win/: restart-wrapper.nsi
changelog/unreleased/: approve-folder-sync.md  auto-expand-folder-tree.md  bandwidth-limit-crash.md  brand-visual-refresh.md  browser-files-and-empty-folders.md  explorer-navigation-pane.md  explorer-shell-integration.md  file-browser.md  german-translations.md  installer-branding.md  installer-instdir-regression.md  large-upload-deadlock.md  quota-display.md  resilient-downloads.md  setup-wrapper.md  share-dialog.md  startmenu-shortcut-fix.md  upload-10gb-move-timeout.md  windows-restart-prompt.md
docs/: mac-vfs-implementation-plan.md
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt  cmd.cpp  httpbasiccredentials.cpp  httpbasiccredentials.h
src/common/: syncjournaldb.cpp  utility_win.cpp
src/gui/: CMakeLists.txt  aboutdialog.ui  accountmanager.cpp  accountstate.cpp  accountstate.h  accountview.cpp  accountview.h  application.cpp  application.h  connectionvalidator.cpp  folder.cpp  folder.h  folderman.cpp  folderman.h  generalsettings.cpp  generalsettings.h  generalsettings.ui  guiutility_unix.cpp  guiutility_win.cpp  main.cpp  navigationpanehelper.cpp  navigationpanehelper.h  networksettings.cpp  networksettings.h  owncloudgui.cpp  (+8 more)
test/: CMakeLists.txt  testappconfig.cpp  testoauth.cpp
translations/: client_de-informal.ts  client_de.ts
(+66 files in other folders)
